2025-02-17T01:08:42Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13360746166 # 568
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-17
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 205 236 / 213 245
* notice: next accum: outdated-unq outdated-all / unq all: 211 243 / 213 245
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-02-02] / []

2025-02-04T01:04:47Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13126127442 # 555
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-04
* notice: last 14d: unq all: 8 9
* notice: prev accum: outdated-unq outdated-all / unq all: 205 236 / 211 243
* notice: next accum: outdated-unq outdated-all / unq all: 205 236 / 213 245
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2025-02-03]

2025-02-03T01:05:47Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13104344411 # 554
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-03
* notice: last 14d: unq all: 6 7
* notice: prev accum: outdated-unq outdated-all / unq all: 204 235 / 205 236
* notice: next accum: outdated-unq outdated-all / unq all: 205 236 / 211 243
* notice: prev exec diff / last date diff / accum: unq all: +6 +7 -0 -0 / +6 +7 -0 -0 / 6 7
* notice: removed / changed dates: [2024-10-13] / [2025-02-02]

2024-10-14T01:46:35Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11319637885 # 448