@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2025-02-17T01:08:42Z",
-  "count_outdated" : 243,
-  "uniques_outdated" : 211,
-  "count" : 245,
-  "uniques" : 213,
+  "timestamp" : "2025-02-18T01:05:52Z",
+  "count_outdated" : 245,
+  "uniques_outdated" : 213,
+  "count" : 246,
+  "uniques" : 214,
   "clones" : [
     {
-      "timestamp": "2025-02-03T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "timestamp": "2025-02-17T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
